# backend/routes/index.js
@@ -1,6 +1,7 @@
 const router = require('express').Router();
 
-router.get('/', (req, res) => { res.send('Hello from the index.js routes file!'); });
+router.get(// #swagger.tags=['Home'];
+    '/', (req, res) => { res.send('Hello from the index.js routes file!'); });
 
 router.use('/api-docs', require('./swagger.js'));
 
